--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "latest",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -57,7 +57,7 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "latest",
     "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
